# Stenograph

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  config.toml  default.nix  diesel.toml
src/: main.rs  models.rs  schema.rs
src/controller/: file.rs  file_controller.rs  markdown.rs  mod.rs  search.rs  tag.rs
src/database/: data.rs  schema.rs
src/storage/: database.rs  filebase.rs  mod.rs
src/structs/: configuration.rs  files.rs  macros.rs  markdown.rs  mod.rs  search.rs  state.rs  tag.rs
