[package]
name = "stenograph_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.1"
anyhow = "1.0.95"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.14"
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"]}
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
regex = "1.10"
serenity = "0.12"
tower-http = "0.6.2"
